@@ -27,7 +27,7 @@ plugins {
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.11.8"
+version = "4.12.2"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=16
@@ -73,6 +73,10 @@ defaultTasks "bootRun"
 
 springBoot {
     mainClass = "de.tum.in.www1.artemis.ArtemisApp"
+}
+
+bootRun {
+    jvmArgs = ["--illegal-access=warn"]
 }
 
 // Execute the test cases: ./gradlew executeTests
@@ -124,7 +128,7 @@ jacocoTestCoverageVerification {
                 counter = "INSTRUCTION"
                 value = "COVEREDRATIO"
                 // TODO: in the future the following value should become at least 0.90
-                minimum = 0.881
+                minimum = 0.86
             }
             limit {
                 counter = "CLASS"
@@ -157,8 +161,10 @@ dependencies {
     implementation files("libs/jplag-3.0.0.jar")
 
     // https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
-    implementation "org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r"
-    implementation "org.eclipse.jgit:org.eclipse.jgit.ssh.apache:5.11.0.202103091610-r"
+    implementation "org.eclipse.jgit:org.eclipse.jgit:${jgit_version}"
+    implementation "org.eclipse.jgit:org.eclipse.jgit.ssh.apache:${jgit_version}"
+    // https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit.archive
+    implementation "org.eclipse.jgit:org.eclipse.jgit.archive:${jgit_version}"
     // https://mvnrepository.com/artifact/net.sourceforge.plantuml/plantuml
     implementation "net.sourceforge.plantuml:plantuml:8059"
     implementation "org.imsglobal:basiclti-util:1.2.0"
@@ -170,7 +176,7 @@ dependencies {
     implementation "io.sentry:sentry-logback:4.3.0"
     implementation "org.jsoup:jsoup:1.13.1"
 
-    implementation "org.springdoc:springdoc-openapi-ui:1.5.7"
+    implementation "org.springdoc:springdoc-openapi-ui:1.5.8"
 
     // import JHipster dependencies BOM
     implementation platform("io.github.jhipster:jhipster-dependencies:${jhipster_dependencies_version}" )
@@ -195,7 +201,7 @@ dependencies {
     implementation "org.hibernate:hibernate-jcache:${hibernate_version}"
     implementation "org.hibernate:hibernate-entitymanager:${hibernate_version}"
     implementation "org.hibernate.validator:hibernate-validator:7.0.1.Final"
-    implementation "org.liquibase:liquibase-core:4.3.4"
+    implementation "org.liquibase:liquibase-core:4.3.5"
     implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-logging:${spring_boot_version}"
